stopped searchbar width getting wider on smaller devices, made all searches/categoryies only include certain platforms, hid loading animation once games are loaded in search list, display an error image when there is no image found for the game card's, fixed release date and rating returning null when filtering by those

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 }
 
 html {
-    font-family: 'Tektur', sans-serif;
+    font-family: 'Outfit', sans-serif;
 }
 
 /* Scroll bar stylings */
